# migration-projects

./: .gitignore  PROJECT_SUMMARY.md  README.md  migration-implementation.md  migration-plan.md
.github/workflows/: batch_secrets.yml  deploy_vault_vm.yml  manual_create.yml  migrate-secrets.yml  vault_migrate.yml  vault_migrate_batch.yml
gcp-central-secrets-architecture/: README.md
infrastructure/terraform-secrets/: README.md
infrastructure/terraform-secrets/envs/dev/: README.md  dev.auto.tfvars  main.tf  variables.tf
infrastructure/terraform-secrets/envs/prod/: README.md  prod.auto.tfvars  variables.tf
infrastructure/terraform-secrets/modules/secret-manager/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/terraform-vault-vm/: main.tf  outputs.tf  variables.tf
scripts/: config.py  main.py
scripts/gcp/: __init__.py  push.py  verify.py
scripts/vault/: __init__.py  connect.py  read.py
tools/manual-creator/: README.md  pyproject.toml  requirements.txt  run.py
tools/manual-creator/src/core_creator/: __init__.py  config.py  migrator.py  readers.py  writers.py
tools/manual-creator/tests/: __init__.py
tools/vault-migrator/: README.md  pyproject.toml  requirements.txt  run.py
tools/vault-migrator/local-env/: docker-compose.yml  setup-vault.ps1
tools/vault-migrator/src/core_migrator/: __init__.py  config.py  interfaces.py  migrator.py  readers.py  writers.py
tools/vault-migrator/tests/: __init__.py
