[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core_creator"
version = "0.1.0"
description = "Manually creates and populates GCP Secrets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-secret-manager==2.16.2"
]
